--- a/app/src/main/res/drawable/drawable_line.xml
+++ b/app/src/main/res/drawable/drawable_line.xml
@@ -3,6 +3,6 @@
     android:shape="line">
 
     <stroke
-        android:color="#393939"
+        android:color="?attr/colorSecondaryVariant"
         android:width="1dp"/>
 </shape>
