--- a/app/src/main/res/layout/fragment_fixture.xml
+++ b/app/src/main/res/layout/fragment_fixture.xml
@@ -44,6 +44,17 @@
                 android:background="@drawable/ic_arrow_forward" />
         </LinearLayout>
     </LinearLayout>
+    <TextView
+        android:id="@+id/no_fixtures_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/date_container"
+        android:layout_centerHorizontal="true"
+        android:text="해당 날짜에 진행 되는 경기가 없습니다."
+        android:layout_marginTop="20dp"
+        android:textSize="18sp"
+        android:textColor="?attr/colorPrimaryVariant"
+        android:visibility="visible"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/league_fixture_recyclerview"
